<resources>
    <string name="app_name">Wordy</string>
    <string name="wordy">Wordy</string>
    <string name="add_word">Add Word</string>
    <string name="enter_guess">Enter Guess</string>
    <string name="title_activity_add_word">Leanback AddWord</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="add_word_to_wordy">Add word to Wordy</string>
    <string name="return_to_wordy">Return to Wordy</string>
    <string name="restart">Restart</string>
    <string name="clear">Clear</string>
</resources>