<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/wordy"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/guessBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_guess"
        app:layout_constraintEnd_toStartOf="@+id/addWord"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessLL" />

    <Button
        android:id="@+id/addWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_word"
        app:layout_constraintBaseline_toBaselineOf="@+id/guessBT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guessBT" />

    <LinearLayout
        android:id="@+id/guessLL"
        android:layout_width="350dp"
        android:layout_height="360dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName">

        <LinearLayout
            android:id="@+id/word1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/g1l1ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g1l2ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g1l3ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g1l4ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g1l5ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/word2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/g2l1ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g2l2ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g2l3ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g2l4ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g2l5ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/word3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/g3l1ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g3l2ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g3l3ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g3l4ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g3l5ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/word4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/g4l1ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g4l2ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g4l3ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g4l4ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g4l5ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/word5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/g5l1ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g5l2ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g5l3ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g5l4ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g5l5ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/word6"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/g6l1ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g6l2ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g6l3ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g6l4ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/g6l5ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="1"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/restartBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/restart"
        app:layout_constraintEnd_toStartOf="@+id/clearBT"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessBT" />

    <Button
        android:id="@+id/clearBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBaseline_toBaselineOf="@+id/restartBT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/restartBT" />
</androidx.constraintlayout.widget.ConstraintLayout>